--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>FORTNIET</title>
+        <title>TITLE</title> <!-- bitti guten titel machen -->
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <form>
+        <form> <!-- startet php datei-->
             <div>
                 <label for="uname">Username</label>
                 <input type="text" id="uname" placeholder="Enter Username" required>
